finished styling 815 min-width media query

--- a/index.html
+++ b/index.html
@@ -195,90 +195,94 @@
 			<section class="albums" id="albums">
 				<h2>Albums</h2>
 
-			<!-- Flip Animation -->
-				<!-- License to Ill -->
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-					<div class="flipper">
-						<div class="front">
-							<!-- Font Content -->
-							<img class="sm" src="images/license-ill-cover.jpeg" alt="License to Ill album cover front" title="License to Ill">
-						</div>
-						<div class="back">
-							<!-- back content -->
-							<img class="sm" src="images/licenseill-back.jpeg" alt="License to Ill album cover back" title="License to Ill">
-						</div>
-					</div>
-				</div>
+				<!-- Flip Animation -->
 
-				<!-- Paul's Boutique -->
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-					<div class="flipper">
-						<div class="front">
-							<!-- Font Content -->
-							<img class="sm" src="images/pauls-boutique-cover.jpeg" alt="Paul's Boutique album cover front" title="Paul's Boutique">
-						</div>
-						<div class="back">
-							<!-- back content -->
-							<img class="sm" src="images/pauls-boutique-cover.jpeg" alt="Paul's Boutique album cover front" title="Paul's Boutique">
+				<div class="wrapper">
+					<!-- #1 License to Ill -->
+					<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+						<div class="flipper">
+							<div class="front">
+								<!-- Font Content -->
+								<img class="sm" src="images/license-ill-cover.jpeg" alt="License to Ill album cover front" title="License to Ill">
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<img class="sm" src="images/licenseill-back.jpeg" alt="License to Ill album cover back" title="License to Ill">
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<!-- Check Your Head -->
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-					<div class="flipper">
-						<div class="front">
-							<!-- Font Content -->
-							<img class="sm" src="images/check-head-cover.jpeg" alt="Check Your Head album cover front" title="Check Your Head">
-						</div>
-						<div class="back">
-							<!-- back content -->
-							<img class="sm" src="images/check-head-back.jpeg" alt="Check Your Head album cover front" title="Check Your Head">
+					<!-- #2 Paul's Boutique -->
+					<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+						<div class="flipper">
+							<div class="front">
+								<!-- Font Content -->
+								<img class="sm" src="images/pauls-boutique-cover.jpeg" alt="Paul's Boutique album cover front" title="Paul's Boutique">
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<img class="sm" src="images/pauls-boutique-cover.jpeg" alt="Paul's Boutique album cover front" title="Paul's Boutique">
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<!-- Ill Communications -->
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-					<div class="flipper">
-						<div class="front">
-							<!-- Font Content -->
-							<img class="sm" src="images/ill-communication-cover.jpeg" alt="Ill Communications album cover front" title="Ill Communications">
-						</div>
-						<div class="back">
-							<!-- back content -->
-							<img class="sm" src="images/ill-comm-back.png" alt="Ill Communications album cover front" title="Ill Communications">
+					<!-- #3 Check Your Head -->
+					<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+						<div class="flipper">
+							<div class="front">
+								<!-- Font Content -->
+								<img class="sm" src="images/check-head-cover.jpeg" alt="Check Your Head album cover front" title="Check Your Head">
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<img class="sm" src="images/check-head-back.jpeg" alt="Check Your Head album cover front" title="Check Your Head">
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<!-- Hello Nasty -->
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-					<div class="flipper">
-						<div class="front">
-							<!-- Font Content -->
-							<img class="sm" src="images/hellonasty-cover.jpeg" alt="Hello Nasty album cover front" title="Hello Nasty">
-						<div class="back">
-							<!-- back content -->
-							<img class="sm" src="images/hellonasty-back.jpeg" alt="Hello Nasty album cover front" title="Hello Nasty">
+					<!-- #4 Ill Communications -->
+					<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+						<div class="flipper">
+							<div class="front">
+								<!-- Font Content -->
+								<img class="sm" src="images/ill-communication-cover.jpeg" alt="Ill Communications album cover front" title="Ill Communications">
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<img class="sm" src="images/ill-comm-back.png" alt="Ill Communications album cover front" title="Ill Communications">
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<!-- To the 5 Boroughs -->
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-					<div class="flipper">
-						<div class="front">
-							<!-- Font Content -->
-							<img class="sm" src="images/boroughs-cover.png" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
-						</div>
-						<div class="back">
-							<!-- back content -->
-							<img class="sm" src="images/boroughs-back.png" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
+					<!-- #5 Hello Nasty -->
+					<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+						<div class="flipper">
+							<div class="front">
+								<!-- Font Content -->
+								<img class="sm" src="images/hellonasty-cover.jpeg" alt="Hello Nasty album cover front" title="Hello Nasty">
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<img class="sm" src="images/hellonasty-back.png" alt="Hello Nasty album cover front" title="Hello Nasty">
+							</div>
 						</div>
 					</div>
+
+					<!-- #6 To the 5 Boroughs -->
+					<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+						<div class="flipper">
+							<div class="front">
+								<!-- Font Content -->
+								<img class="sm" src="images/boroughs-cover.png" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<img class="sm" src="images/boroughs-back.png" alt="To The 5 Boroughs album cover front" title="To The 5 Boroughs">
+							</div>
+						</div>
+					</div>
+					<!-- Flip Animation End -->
 				</div>
-			<!-- Flip Animation End -->
 			</section>
 
 
