--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<body class="site">
 		<header id="top">
 			<div class="nav-bar">
-				<img class="logo" src="images/bboy-logo.png" alt="Beastie Boys Logo from Sabotage" title="The Beastie Boys" width="100" height="78.7">
+				<img class="logo" src="images/bboy-logo.png" alt="Beastie Boys Logo from Sabotage" title="The Beastie Boys" width="100" height="78">
 
 				<!-- Hamburger Menu buttons -->
 				<button class="hamburger">&#9776;</button>
@@ -46,11 +46,11 @@
 				<!-- Hamburger Menu -->
 				<nav class="menu">
 					<ul>
-						<a href="#overview"><li>About</li></a>
-						<a href="#about"><li>Ad Rock</li></a>
-						<a href="#mca"><li>MC A</li></a>
-						<a href="#mike-d"><li>Mike D</li></a>
-						<a href="#albums"><li>Albums</li></a>
+						<li><a href="#overview">About</a></li>
+						<li><a href="#about">Ad Rock</a></li>
+						<li><a href="#mca">MC A</a></li>
+						<li><a href="#mike-d">Mike D</a></li>
+						<li><a href="#albums">Albums</a></li>
 					</ul>
 				</nav>
 
@@ -80,11 +80,9 @@
 
 						<li class="form"><form class="search" action="index.html">
 							<input class="input" type="search" name="search" placeholder="Enter keyword..."/>
-							<input type="submit" value="search" />
+							<input class="input-btn" type="submit" value="Search" />
 						</form></li>
-
 					</ul>
-
 				</nav>
 			</div>
 
@@ -105,18 +103,6 @@
 				<p>...a trio of goofy teenagers were able to run wild through a city in seedy decline. Coming of age just as punk rock and hip-hop blossomed in the city, the Beasties fell in love with the musical chaos and heady energy that was swirling all around them. They were able to tap into that energy and draw inspiration from it for the remainder of their careers, as their fond recollections of the time and place make clear. They don’t sugar-coat it, though, and every story of hanging out on the third floor of Danceteria is tempered by one about hordes of rats swarming from their apartment trash cans.</p>
 			</article>
 
-
-			<hr />
-
-			<section class="section-break">
-				<div class="video" id="vid">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/ru3gH27Fn6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
-				<img src="images/beastie-puma.jpeg" alt="image of the Beastie Boys wearing red and black tracksuits and their D.J. holding a boombox next to a building in New York City" title="Solid Gold Hits!">
-			</section>
-
-
 			<div class="art-aside">
 				<section>
 					<article class="ad-rock" id="about">
@@ -125,11 +111,10 @@
 							<figcaption>Photo pulled from Popwell.net</figcaption>
 						</figure>
 						<h2>Adam "King Ad-Rock" Horowitz</h2>
-						<p>Adam Keefe Horovitz, better known by Ad-Rock or King Ad-Rock, was born on October 31st, 1966. Horovitz began his career in music with the punk rock band, The Young and the Useless. The band would often perform alongside the Beastie Boys, who was also a punk rock band at the time. When guitarist for the Beastie Boys, John Berry, quit, Horovitz joined the Beastie Boys in 1982 at age 16. Shortly after his induction into the group, they changed their sound from punk rock to hip hop.
-							<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
-								<p>The King Ad-Rock, that is my name, and I know the fly spot where they got the champagne</p>
-							</blockquote>
-						</p>
+						<p>Adam Keefe Horovitz, better known by Ad-Rock or King Ad-Rock, was born on October 31st, 1966. Horovitz began his career in music with the punk rock band, The Young and the Useless. The band would often perform alongside the Beastie Boys, who was also a punk rock band at the time. When guitarist for the Beastie Boys, John Berry, quit, Horovitz joined the Beastie Boys in 1982 at age 16. Shortly after his induction into the group, they changed their sound from punk rock to hip hop.</p>
+						<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
+							<p>The King Ad-Rock, that is my name, and I know the fly spot where they got the champagne</p>
+						</blockquote>
 					</article>
 
 					<article class="mca" id="mca">
@@ -138,11 +123,10 @@
 							<figcaption>Photo pulled from NorthernExpress.com</figcaption>
 						</figure>
 						<h2>Adam "MC A" Yauch</h2>
-						<p>Adam Yauch, or MC A, was born on August 5th, 1964 and died of cancer in 2012. Yauch founded the hip hop group, Beastie Boys in New York City. He directed many of the Beastie Boys' music videos, often under the pseudonym Nathaniel Hornblower. Yauch became a practicing Buddhist and was a champion for the <em>Tibetan independence movement</em>. A leader in spreading equality, MC A rapped the verse:
-							<blockquote cite="https://en.wikipedia.org/wiki/Adam_Yauch">
-								<p class="quote">I want to say something that's long overdue: The disrespect to women has got to be through: To all the mothers and sisters and wives and friends: I want to offer my love and respect till the end.</p>
-							</blockquote>
-						</p>
+						<p>Adam Yauch, or MC A, was born on August 5th, 1964 and died of cancer in 2012. Yauch founded the hip hop group, Beastie Boys in New York City. He directed many of the Beastie Boys' music videos, often under the pseudonym Nathaniel Hornblower. Yauch became a practicing Buddhist and was a champion for the <em>Tibetan independence movement</em>. A leader in spreading equality, MC A rapped the verse:</p>
+						<blockquote cite="https://en.wikipedia.org/wiki/Adam_Yauch">
+							<p class="quote">I want to say something that's long overdue: The disrespect to women has got to be through: To all the mothers and sisters and wives and friends: I want to offer my love and respect till the end.</p>
+						</blockquote>
 					</article>
 
 					<article class="mike-d" id="mike-d">
@@ -151,11 +135,10 @@
 							<figcaption>Photo pulled from HappyMag.tv</figcaption>
 						</figure>
 						<h2>Mike "D" Diamond</h2>
-						<p>Michael Diamond, known as Mike D, was born on November 20th, 1965 in New York City. Mike D formed the Beastie Boys with Adam Yauch in 1981, soon adding Adam Horovitz to the group. They started out as a punk band, but they found their calling with hip-hop music. In 1985, they opened for Madonna on her famous "Like a Virgin" tour. The Beastie Boys gained huge success with numerous albums and tours, then later founded their own record label and magazine called Grand Royal in 1993. Mike often plays the drums for Beastie Boys songs when they are not performing with a DJ.
-							<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
-								<p>I'm Mike D and I get respect. Your cash and your jewelry is what I expect.</p>
-							</blockquote>
-						</p>
+						<p>Michael Diamond, known as Mike D, was born on November 20th, 1965 in New York City. Mike D formed the Beastie Boys with Adam Yauch in 1981, soon adding Adam Horovitz to the group. They started out as a punk band, but they found their calling with hip-hop music. In 1985, they opened for Madonna on her famous "Like a Virgin" tour. The Beastie Boys gained huge success with numerous albums and tours, then later founded their own record label and magazine called Grand Royal in 1993. Mike often plays the drums for Beastie Boys songs when they are not performing with a DJ.</p>
+						<blockquote cite="https://genius.com/Beastie-boys-pau-revere-lyrics">
+							<p>I'm Mike D and I get respect. Your cash and your jewelry is what I expect.</p>
+						</blockquote>
 					</article>
 				</section>
 
@@ -166,6 +149,7 @@
 								<a href="#about"><img src="images/bboy-adrock.png" alt="Silouette of Adam Horowitz" title="Adam Horowitz"/>
 									<h4>Ad-Rock</h4>
 								</a>
+<!-- Iframes Codes for this section copied from Spotify -->
 								<iframe src="https://open.spotify.com/embed/playlist/0sS7QPSXEZ3foYbvZUG16n" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 							</li>
 
@@ -184,24 +168,8 @@
 							</li>
 						</ul>
 					</div>
-
-					<!-- <div class="media">
-						<div class="audio">
-							<iframe src="https://open.spotify.com/embed/artist/03r4iKL2g2442PT9n2UKsx?theme=0" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-						</div>
-					</div> -->
 				</aside>
 			</div>
-
-
-			<section class="section-break">
-				<div class="video" id="vid">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/ru3gH27Fn6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
-				<img src="images/bboys-story.jpeg" alt="image of the Beastie Boys...two are sitting on a skateboard as MC A jumps over. Image is taken from a lower perspective and looking up at the Beastie Boys" title="If its going to be that kind of party...">
-			</section>
-
 
 			<section class="albums" id="albums">
 				<h2>Albums</h2>
@@ -295,9 +263,6 @@
 					<!-- Flip Animation End -->
 				</div>
 			</section>
-
-
-
 		</main>
 
 		<footer>
@@ -317,12 +282,17 @@
 				<p>&copy; Copyright 2021</p>
 				<p>Designed by <a href="mailto:jonathan.zehner28@gmail.com">Nomad Web Designs</a></p>
 			</div>
-
+			<p class="validator">
+    		<a href="http://jigsaw.w3.org/css-validator/check/referer">
+        	<img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    		</a>
+			</p>
 		</footer>
-    <script src="lightbox/src/js/lightbox.js"></script>
+		<!-- Scripts -->
+    <script src="scripts/html5shiv-printshiv.min.js"></script>
     <script src="scripts/scripts.js"></script>
-    <script src="scripts/hamburger.js"></script>
-
+    <script src="scripts/smoothscroll.js"></script>
 	</body>
-
 </html>
