activated music link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							</div>
 						</li>
 						<li class="main-li"><a href="#albums">Albums</a></li>
-						<li class="main-li"><a href="#vid">Music Videos</a></li>
+						<li class="main-li"><a href="https://open.spotify.com/artist/03r4iKL2g2442PT9n2UKsx">Music</a></li>
 					</ul>
 
 					<ul class="social">
@@ -145,7 +145,7 @@
 				<aside class="sidebar">
 					<div class="three-beasties">
 						<ul>
-							<li class="adam-h">
+							<li class="adam-h"
 								<a href="#about"><img src="images/bboy-adrock.png" alt="Silouette of Adam Horowitz" title="Adam Horowitz"/>
 									<h4>Ad-Rock</h4>
 								</a>
