corrected music link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							</div>
 						</li>
 						<li class="main-li"><a href="#albums">Albums</a></li>
-						<li class="main-li"><a href="https://open.spotify.com/artist/03r4iKL2g2442PT9n2UKsx">Music</a></li>
+						<li class="main-li"><a href="https://open.spotify.com/artist/03r4iKL2g2442PT9n2UKsx" target="_blank">Music</a></li>
 					</ul>
 
 					<ul class="social">
